about india usa contact gallert index compleated

--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
                   <a href="contact.html">contact</a>
                 </li>
                 <li>
-                  <a href="register.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i
+                  <a href="404.html" class="btn btn-gray btn-transparent btn-theme-colored">Register <i
                       class="fa fa-arrow-circle-right"></i></a>
 
                 </li>
@@ -197,8 +197,8 @@
                 <p class="mb-10">We prioritize not just technical expertise but also vital soft skills, ensuring a
                   holistic professional development journey. Join Prospire Institution—a dedicated partner in your
                   accounting success.</p>
-                <a class="btn btn-colored btn-theme-colored btn-lg text-uppercase font-13 mt-0" href="about.html">More
-                  About Us</a>
+                <a class="btn btn-colored btn-theme-colored btn-lg text-uppercase font-13 mt-0" href="contact.html">
+                  Contact Us</a>
               </div>
               <div class="col-sm-12 col-md-6 mt-0 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.5s">
                 <div class="video-popup">
@@ -408,6 +408,45 @@
           </div>
         </div>
       </section>
+      <!-- Divider: Clients -->
+      <section class="clients ">
+        <div class="container pt-10 pb-6 pt-sm-0 pb-sm-0">
+          <div class="row">
+            <div class="col-md-12">
+              <!-- Section: Clients -->
+              <div class="owl-carousel-6col transparent text-center owl-nav-top">
+                <div class="item">
+                  <a href="#"><img src="images/mainimages/placement_main_1.jpg" alt="" /></a>
+                </div>
+                <div class="item">
+                  <a href="#"><img src="images/mainimages/placement_main_4.jpg" alt="" /></a>
+                </div>
+                <div class="item">
+                  <a href="#"><img src="images/mainimages/placement_main_5.jpg" alt="" /></a>
+                </div>
+                <div class="item">
+                  <a href="#"><img src="images/mainimages/placement_consulting_2.jpg" alt="" /></a>
+                </div>
+                <div class="item">
+                  <a href="#"><img src="images/mainimages/placement_main_3.jpg" alt="" /></a>
+                </div>
+                <div class="item">
+                  <a href="#"><img src="images/mainimages/placement_main_4.jpg" alt="" /></a>
+                </div>
+                <div class="item">
+                  <a href="#"><img src="images/mainimages/placement_finacial_1.jpg" alt="" /></a>
+                </div>
+                <div class="item">
+                  <a href="#"><img src="images/mainimages/placement_main_2.jpg" alt="" /></a>
+                </div>
+                <div class="item">
+                  <a href="#"><img src="images/mainimages/placement_main_3.jpg" alt="" /></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- Divider: Reservation Form -->
       <section>
@@ -417,7 +456,7 @@
               <div class="p-40 pl-0">
                 <!-- Reservation Form Start-->
                 <form id="reservation_form" name="reservation_form" class="reservation-form" method="post" action="#">
-                  <h3 class="mt-0 line-bottom mb-40">Get A Free<span class="text-theme-color-2"> Service Now!</span>
+                  <h3 class="mt-0 line-bottom mb-40"><span class="text-theme-color-2">Register Now !</span>to Tap into Expert Guidance!
                   </h3>
                   <div class="row">
                     <div class="col-sm-12">
@@ -426,7 +465,7 @@
                           required="" class="form-control">
                       </div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-12">
                       <div class="form-group mb-30">
                         <input placeholder="Email" type="text" id="reservation_email" name="reservation_email"
                           class="form-control" required="">
@@ -443,23 +482,19 @@
                         <div class="styled-select">
                           <select id="booking_service" name="booking_service" class="form-control" required="">
                             <option value="">- Select Your Courses -</option>
-                            <option value="Accounting Technoloiges">Accounting Technoloiges</option>
-                            <option value="Chemical Engineering">Chemical Engineering</option>
-                            <option value="Computer Technologies">Computer Technologies</option>
-                            <option value="Development Studies">Development Studies</option>
-                            <option value="Electrical & Electronic">Electrical & Electronic</option>
-                            <option value="Modern Languages">Modern Languages</option>
-                            <option value="Modern Technologies">Modern Technologies</option>
-                            <option value="Software Engineering">Software Engineering</option>
+                            <option value="Accounting Technoloiges">CMA USA</option>
+                            <option value="Chemical Engineering">CMA INDIA</option>
+                            <option value="Computer Technologies">Enrollment Agent</option>
+                            <option value="Development Studies">GST VAT</option>
+                            <option value="Electrical & Electronic">ACCA IFRS</option>
                           </select>
                         </div>
                       </div>
                     </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-12">
                       <div class="form-group mb-30">
-                        <input name="reservation_date" class="form-control required date-picker" type="text"
-                          placeholder="Reservation Date" aria-required="true">
-                      </div>
+                        <textarea id="form_message" name="form_message" class="form-control required"  placeholder="Enter Message" rows="5" aria-required="true"></textarea>
+                      </div>  
                     </div>
                     <div class="col-sm-12">
                       <div class="form-group mb-0 mt-0">
@@ -507,28 +542,6 @@
         </div>
       </section>
 
-      <!-- Divider: Clients -->
-      <section class="clients bg-theme-colored">
-        <div class="container pt-10 pb-0 pt-sm-0 pb-sm-0">
-          <div class="row">
-            <div class="col-md-12">
-              <!-- Section: Clients -->
-              <div class="owl-carousel-6col transparent text-center owl-nav-top">
-                <div class="item"> <a href="#"><img src="images/clients/w1.png" alt=""></a></div>
-                <div class="item"> <a href="#"><img src="images/clients/w2.png" alt=""></a></div>
-                <div class="item"> <a href="#"><img src="images/clients/w3.png" alt=""></a></div>
-                <div class="item"> <a href="#"><img src="images/clients/w4.png" alt=""></a></div>
-                <div class="item"> <a href="#"><img src="images/clients/w5.png" alt=""></a></div>
-                <div class="item"> <a href="#"><img src="images/clients/w6.png" alt=""></a></div>
-                <div class="item"> <a href="#"><img src="images/clients/w3.png" alt=""></a></div>
-                <div class="item"> <a href="#"><img src="images/clients/w4.png" alt=""></a></div>
-                <div class="item"> <a href="#"><img src="images/clients/w5.png" alt=""></a></div>
-                <div class="item"> <a href="#"><img src="images/clients/w6.png" alt=""></a></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
 
     </div>
     <!-- end main-content -->
@@ -539,59 +552,18 @@
         <div class="row border-bottom-black">
           <div class="col-sm-6 col-md-3">
             <div class="widget dark">
-              <img class="mt-10 mb-20" alt="" src="images/logo-wide-white.png">
-              <p>203, Envato Labs, Behind Alis Steet, Melbourne, Australia.</p>
+              <h5 class="widget-title mb-10">Contact Us</h5>
+              <!-- <img class="mt-10 mb-20" alt="" src="images/mainimages/Logo_transparent.png"> -->
               <ul class="list-inline mt-5">
-                <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
-                    href="#">123-456-789</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a class="text-gray"
+                    href="#">Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka</a> </li>
+                    <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
+                      href="#">+91 9056666275</a> </li>
+  
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a
-                    class="text-gray" href="#">contact@yourdomain.com</a> </li>
+                    class="text-gray" href="#"> educationprospire@gmail.com</a> </li>
                 <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray"
-                    href="#">www.yourdomain.com</a> </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="widget dark">
-              <h5 class="widget-title mb-10">Call Us Now</h5>
-              <div class="text-gray">
-                +61 3 1234 5678 <br>
-                +12 3 1234 5678
-              </div>
-            </div>
-            <div class="widget dark">
-              <h5 class="widget-title mb-10">Opening Hours</h5>
-              <div class="opening-hours">
-                <ul class="list-border">
-                  <li class="clearfix"> <span> Mon - Fri :</span>
-                    <div class="value pull-right"> 8.00 am - 6.00 pm </div>
-                  </li>
-                  <li class="clearfix"> <span> Sun : </span>
-                    <div class="value pull-right"> Colosed </div>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="widget dark">
-              <h5 class="widget-title line-bottom">Useful Links</h5>
-              <ul class="list-border">
-                <li><a href="index-mp-layout1.html">Home</a></li>
-                <li><a href="page-about1.html">About us</a></li>
-                <li><a href="shortcode-sitemap.html">Sitemap</a></li>
-                <li><a href="page-faq-style1.html">Faq's</a></li>
-                <li><a href="page-contact1.html">Contact</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-3">
-            <div class="widget dark mb-20">
-              <h5 class="widget-title line-bottom">Quick Contact</h5>
-              <ul class="list-border font-13">
-                <li><a href="#">+(012) 345 6789</a></li>
-                <li><a href="#">hello@yourdomain.com</a></li>
-                <li><a href="#" class="lineheight-20">121 King Street, Melbourne Victoria 3000, Australia</a></li>
+                    href="https://prospireeducation.in/">https://prospireeducation.in/</a> </li>
               </ul>
             </div>
             <div class="widget dark">
@@ -605,6 +577,53 @@
                 <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
               </ul>
             </div>
+
+          </div>
+
+          <div class="col-sm-6 col-md-3">
+            <div class="widget dark">
+              <h5 class="widget-title line-bottom">Useful Links</h5>
+              <ul class="list-border">
+                <li><a href="/">Home</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="career.html">career</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="widget dark mb-20">
+              <h5 class="widget-title line-bottom">Our Course</h5>
+              <ul class="list-border font-13">
+                <li><a href="cmausa.html">CMA USA</a></li>
+                <li><a href="cmaindia.html">CMA INDIA</a></li>
+                <li><a href="enrolledagent.html">EA (Enrolled Agent)</a></li>
+                <li><a href="gstvat.html">GST VAT</a></li>
+                <li><a href="acca.html">ACCA IFRS</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="widget dark">
+              <h5 class="widget-title mb-10">Call Us Now</h5>
+              <div class="text-gray">
+                +91 9056666275 <br>
+                +91 9056666275
+              </div>
+              <p class="font-16 text-white mb-5 mt-15">Subscribe to our newsletter</p>
+              <form id="footer-mailchimp-subscription-form" class="newsletter-form mt-10">
+                <label class="display-block" for="mce-EMAIL"></label>
+                <div class="input-group">
+                  <input type="email" value="" name="EMAIL" placeholder="Your Email" class="form-control"
+                    data-height="37px" id="mce-EMAIL">
+                  <span class="input-group-btn">
+                    <button type="submit" class="btn btn-colored btn-theme-colored m-0"><i
+                        class="fa fa-paper-plane-o text-white"></i></button>
+                  </span>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
@@ -612,20 +631,12 @@
         <div class="container pt-10 pb-0">
           <div class="row">
             <div class="col-md-6 sm-text-center">
-              <p class="font-13 text-black-777 m-0"><a target="_blank" href="https://www.templateshub.net">Templates
-                  Hub</a></p>
-            </div>
-            <div class="col-md-6 text-right flip sm-text-center">
-              <div class="widget no-border m-0">
-                <ul class="styled-icons icon-dark icon-circled icon-sm">
-                  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                  <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                  <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                  <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                </ul>
-              </div>
+              <p class="mb-4">
+                &copy;
+                <a class="font-13 text-black-777 m-0" href="https://prospireeducation.in/">Prospire</a>. All Rights
+                Reserved. Designed by
+                <a class="text-white border-bottom" href="https://wexorai.com/">WexorAI</a>
+              </p>
             </div>
           </div>
         </div>
