--- a/contact.html
+++ b/contact.html
@@ -80,34 +80,26 @@
     <div class="header-top bg-theme-color-2 sm-text-center">
       <div class="container">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-11">
             <div class="widget no-border m-0">
               <ul class="list-inline">
-                <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-white"></i> <a class="text-white" href="#">123-456-789</a> </li>
-                <li class="text-white m-0 pl-10 pr-10"> <i class="fa fa-clock-o text-white"></i> Mon-Fri 8:00 to 2:00 </li>
-                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-white"></i> <a class="text-white" href="#">contact@yourdomain.com</a> </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="widget no-border m-0">
-              <ul class="list-inline text-right sm-text-center">
-                <li>
-                  <a href="#" class="text-white">FAQ</a>
+                <li class="m-0 pl-10 pr-10">
+                  <i class="fa fa-phone text-white"></i>
+                  <a class="text-white" href="#">+91 9056666275</a>
                 </li>
-                <li class="text-white">|</li>
-                <li>
-                  <a href="#" class="text-white">Help Desk</a>
+                <li class="m-0 pl-10 pr-10">
+                  <i class="fa fa-map-marker text-white"></i>
+                  <a class="text-white" href="#">Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka</a>
                 </li>
-                <li class="text-white">|</li>
-                <li>
-                  <a href="#" class="text-white">Support</a>
+                <li class="m-0 pl-10 pr-10">
+                  <i class="fa fa-envelope-o text-white"></i>
+                  <a class="text-white" href="#">educationprospire@gmail.com</a>
                 </li>
               </ul>
             </div>
           </div>
         </div>
-      </div>
+    </div>
     </div>
     <div class="header-nav">
       <div class="header-nav-wrapper navbar-scrolltofixed bg-white">
@@ -179,9 +171,8 @@
             <div class="col-md-12">
               <h2 class="title text-white text-center">Contact</h2>
               <ol class="breadcrumb text-left text-black mt-10">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Pages</a></li>
-                <li class="active text-gray-silver">Page Title</li>
+                <li><a href="/">Home</a></li>
+                <li class="active text-gray-silver">Contact</li>
               </ol>
             </div>
           </div>
@@ -207,21 +198,22 @@
               <div class="contact-info text-center">
                 <i class="fa fa-phone font-36 mb-10 text-theme-colored"></i>
                 <h4>Call Us</h4>
-                <h6 class="text-gray">Phone: +262 695 2601</h6>
+                <h6 class="text-gray">Phone: +91 9056666275</h6>
               </div>
             </div>
             <div class="col-sm-12 col-md-4">
               <div class="contact-info text-center">
                 <i class="fa fa-map-marker font-36 mb-10 text-theme-colored"></i>
                 <h4>Address</h4>
-                <h6 class="text-gray">121 King Street, Australia</h6>
+                <h6 class="text-gray">Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka</h6>
               </div>
             </div>
             <div class="col-sm-12 col-md-4">
               <div class="contact-info text-center">
                 <i class="fa fa-envelope font-36 mb-10 text-theme-colored"></i>
                 <h4>Email</h4>
-                <h6 class="text-gray">you@yourdomain.com</h6>
+                <h6 class="text-gray">educationprospire@gmail.com
+                </h6>
               </div>
             </div>
           </div>
@@ -234,7 +226,7 @@
       <div class="container">
         <div class="row pt-30">
           <div class="col-md-7">
-            <h3 class="line-bottom mt-0 mb-30">Interested in discussing?</h3>
+            <h3 class="line-bottom mt-0 mb-30">Reach Out: Contact Us for Assistance</h3>
             
             <!-- Contact Form -->
             <form id="contact_form" name="contact_form" class="" action="#" method="post">
@@ -254,10 +246,21 @@
               </div>
               <div class="row">
                 <div class="col-sm-6">
-                  <div class="form-group">
-                    <label>Subject <small>*</small></label>
-                    <input name="form_subject" class="form-control required" type="text" placeholder="Enter Subject">
-                  </div>
+                  <label>course <small>*</small></label>
+
+                    <div class="form-group mb-30">
+                      <div class="styled-select">
+                        <select id="booking_service" name="booking_service" class="form-control" required="">
+                          <option value="">- Select Your Courses -</option>
+                          <option value="Accounting Technoloiges">CMA USA</option>
+                          <option value="Chemical Engineering">CMA INDIA</option>
+                          <option value="Computer Technologies">Enrollment Agent</option>
+                          <option value="Development Studies">GST VAT</option>
+                          <option value="Electrical & Electronic">ACCA IFRS</option>
+                        </select>
+                      </div>
+                    </div>
+
                 </div>
                 <div class="col-sm-6">
                   <div class="form-group">
@@ -322,87 +325,29 @@
   </div>
   <!-- end main-content -->
 
-  <!-- Footer -->
-  <footer id="footer" class="footer bg-black-222">
-    <div class="container pt-70 pb-30">
-      <div class="row border-bottom-black">
-        <div class="col-sm-6 col-md-3">
-          <div class="widget dark">
-            <img class="mt-10 mb-20" alt="" src="images/logo-wide-white.png">
-            <p>203, Envato Labs, Behind Alis Steet, Melbourne, Australia.</p>
-            <ul class="list-inline mt-5">
-              <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray" href="#">123-456-789</a> </li>
-              <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a class="text-gray" href="#">contact@yourdomain.com</a> </li>
-              <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray" href="#">www.yourdomain.com</a> </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-          <div class="widget dark">
-            <h5 class="widget-title mb-10">Call Us Now</h5>
-            <div class="text-gray">
-              +61 3 1234 5678 <br>
-              +12 3 1234 5678
-            </div>
-          </div>
-          <div class="widget dark">
-            <h5 class="widget-title mb-10">Opening Hours</h5>
-            <div class="opening-hours">
-              <ul class="list-border">
-                <li class="clearfix"> <span> Mon - Fri :</span>
-                  <div class="value pull-right"> 8.00 am - 6.00 pm </div>
-                </li>
-                <li class="clearfix"> <span> Sun : </span>
-                  <div class="value pull-right"> Colosed </div>
-                </li>
+    <!-- Footer -->
+    <footer id="footer" class="footer bg-black-222">
+      <div class="container pt-70 pb-30">
+        <div class="row border-bottom-black">
+          <div class="col-sm-6 col-md-3">
+            <div class="widget dark">
+              <h5 class="widget-title mb-10">Contact Us</h5>
+              <!-- <img class="mt-10 mb-20" alt="" src="images/mainimages/Logo_transparent.png"> -->
+              <ul class="list-inline mt-5">
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-map-marker  text-theme-colored mr-5"></i> <a class="text-gray"
+                    href="#">Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka</a> </li>
+                    <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray"
+                      href="#">+91 9056666275</a> </li>
+  
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a
+                    class="text-gray" href="#"> educationprospire@gmail.com</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-globe text-theme-colored mr-5"></i> <a class="text-gray"
+                    href="https://prospireeducation.in/">https://prospireeducation.in/</a> </li>
               </ul>
             </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-          <div class="widget dark">
-            <h5 class="widget-title line-bottom">Useful Links</h5>
-            <ul class="list-border">
-              <li><a href="index-mp-layout1.html">Home</a></li>
-              <li><a href="page-about1.html">About us</a></li>
-              <li><a href="shortcode-sitemap.html">Sitemap</a></li>
-              <li><a href="page-faq-style1.html">Faq's</a></li>
-              <li><a href="page-contact1.html">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-          <div class="widget dark mb-20">
-            <h5 class="widget-title line-bottom">Quick Contact</h5>
-            <ul class="list-border font-13">
-              <li><a href="#">+(012) 345 6789</a></li>
-              <li><a href="#">hello@yourdomain.com</a></li>
-              <li><a href="#" class="lineheight-20">121 King Street, Melbourne Victoria 3000, Australia</a></li>
-            </ul>
-          </div>
-          <div class="widget dark">
-            <h6 class="widget-title mb-0 text-gray-darkgray">Connect With Us</h6>
-            <ul class="styled-icons icon-dark icon-circled icon-sm mt-10">
-              <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-skype"></i></a></li>
-              <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-              <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="footer-bottom bg-black-333">
-      <div class="container pt-10 pb-0">
-        <div class="row">
-          <div class="col-md-6 sm-text-center">
-            <p class="font-13 text-black-777 m-0"><a target="_blank" href="https://www.templateshub.net">Templates Hub</a></p>
-          </div>
-          <div class="col-md-6 text-right flip sm-text-center">
-            <div class="widget no-border m-0">
-              <ul class="styled-icons icon-dark icon-circled icon-sm">
+            <div class="widget dark">
+              <h6 class="widget-title mb-0 text-gray-darkgray">Connect With Us</h6>
+              <ul class="styled-icons icon-dark icon-circled icon-sm mt-10">
                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fa fa-skype"></i></a></li>
@@ -411,11 +356,71 @@
                 <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
               </ul>
             </div>
+
+          </div>
+
+          <div class="col-sm-6 col-md-3">
+            <div class="widget dark">
+              <h5 class="widget-title line-bottom">Useful Links</h5>
+              <ul class="list-border">
+                <li><a href="/">Home</a></li>
+                <li><a href="about.html">About us</a></li>
+                <li><a href="career.html">career</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="widget dark mb-20">
+              <h5 class="widget-title line-bottom">Our Course</h5>
+              <ul class="list-border font-13">
+                <li><a href="cmausa.html">CMA USA</a></li>
+                <li><a href="cmaindia.html">CMA INDIA</a></li>
+                <li><a href="enrolledagent.html">EA (Enrolled Agent)</a></li>
+                <li><a href="gstvat.html">GST VAT</a></li>
+                <li><a href="acca.html">ACCA IFRS</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-3">
+            <div class="widget dark">
+              <h5 class="widget-title mb-10">Call Us Now</h5>
+              <div class="text-gray">
+                +91 9056666275 <br>
+                +91 9056666275
+              </div>
+              <p class="font-16 text-white mb-5 mt-15">Subscribe to our newsletter</p>
+              <form id="footer-mailchimp-subscription-form" class="newsletter-form mt-10">
+                <label class="display-block" for="mce-EMAIL"></label>
+                <div class="input-group">
+                  <input type="email" value="" name="EMAIL" placeholder="Your Email" class="form-control"
+                    data-height="37px" id="mce-EMAIL">
+                  <span class="input-group-btn">
+                    <button type="submit" class="btn btn-colored btn-theme-colored m-0"><i
+                        class="fa fa-paper-plane-o text-white"></i></button>
+                  </span>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
+      <div class="footer-bottom bg-black-333">
+        <div class="container pt-10 pb-0">
+          <div class="row">
+            <div class="col-md-6 sm-text-center">
+              <p class="mb-4">
+                &copy;
+                <a class="font-13 text-black-777 m-0" href="https://prospireeducation.in/">Prospire</a>. All Rights
+                Reserved. Designed by
+                <a class="text-white border-bottom" href="https://wexorai.com/">WexorAI</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   <a class="scrollToTop" href="#"><i class="fa fa-angle-up"></i></a>
 </div>
 <!-- end wrapper -->
